@startuml erd_001_directives
!include common/erd_styles.puml

title Directives (PostgreSQL) — C4 store: directives · Mutable, Versioned

package "Directives" {
  entity "Directives" as Directives {
    * lineage_id : UUID <<PK, immutable>>
    --
    execution_id : UUID
    status : ENUM(active, deprecated, draft, superseded)
    revision : INTEGER
    metadata : JSONB
    created_at : TIMESTAMPTZ
    updated_at : TIMESTAMPTZ
  }

  entity "DirectiveRevisions" as DirectiveRevisions {
    * revision_id : UUID <<PK>>
    --
    o lineage_id : UUID <<FK>>
    execution_id : UUID
    revision_number : INTEGER
    executable_document : JSONB
    policy_doctrine_document : JSONB
    paired_policy_ref : TEXT
    created_by : TEXT
    created_at : TIMESTAMPTZ
  }

  entity "LineageOperations" as LineageOperations {
    * operation_id : UUID <<PK>>
    --
    o lineage_id : UUID <<FK>>
    operation_type : ENUM(fork, merge, split)
    source_ids : JSONB
    target_ids : JSONB
    created_at : TIMESTAMPTZ
  }
}

Directives ||--o{ DirectiveRevisions : "lineage_id"
Directives ||--o{ LineageOperations : "lineage_id"

note bottom of Directives
  **Locking Model**
  • read_lock  → concurrent reads
  • write_lock → exclusive writes, FIFO queue
end note

note bottom of DirectiveRevisions
  **Invariants**
  • lineage_id is immutable once set
  • Every modification creates a new revision
  • revision_number is monotonically increasing
  • Dual document: executable_document (rule_schema)
    + policy_doctrine_document (policy_doctrine)
  • paired_policy_ref links guidance to this revision
  • Compiler reads executable only; guidance reads doctrine only
end note

note bottom of LineageOperations
  **Invariants**
  • source_ids / target_ids are JSON arrays
  • operation_type ∈ {fork, merge, split}
end note

@enduml
